20210209.- Cambio de etiquetas en la columna.

--- a/Client/src/main/webapp/pais/selectPais.xhtml
+++ b/Client/src/main/webapp/pais/selectPais.xhtml
@@ -16,15 +16,15 @@
 				<h:outputText value="#{pais.inpais}" />
 			</p:column>
 
-			<p:column headerText="nopais" sortBy="#{pais.nopais}" filterBy="#{pais.nopais}">
+			<p:column headerText="Nombre país" sortBy="#{pais.nopais}" filterBy="#{pais.nopais}">
 				<h:outputText value="#{pais.nopais}" />
 			</p:column>
 
-			<p:column headerText="contin" sortBy="#{pais.contin}" filterBy="#{pais.contin}">
+			<p:column headerText="Continente" sortBy="#{pais.contin}" filterBy="#{pais.contin}">
 				<h:outputText value="#{pais.contin}" />
 			</p:column>
 
-			<p:column headerText="comeur" sortBy="#{pais.comeur}" filterBy="#{pais.comeur}">
+			<p:column headerText="C.Europea" sortBy="#{pais.comeur}" filterBy="#{pais.comeur}">
 				<h:outputText value="#{pais.comeur}" />
 			</p:column>
 
