--- a/Client/src/main/webapp/home.xhtml
+++ b/Client/src/main/webapp/home.xhtml
@@ -6,13 +6,23 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 	<h:head></h:head>
-	<h:body>
+	<h:body style="text-align:center">
+		<h1>AWEN.- Aplicación Web para Empresas y Negocios</h1>
 		<h:form>
-			<h:outputText value="Usuario" />
-			<h:inputText value="#{beanAdministrado.nombre}"></h:inputText>
-			<h:outputText value="Contraseña" />
-			<h:inputSecret value="#{beanAdministrado.contrasenya}"></h:inputSecret>
-			<p:commandButton value="Enviar" action="#{beanAdministrado.enviar}" />
+      		<p:panel header="Autentificación" style="width:350px; text-align:center" >
+        		<h:panelGrid columns="2" cellpadding="5" >
+		
+					<h:outputText value="Usuario" />
+					<h:inputText value="#{beanAdministrado.usuario}"></h:inputText>
+					<h:outputText value="Contraseña" />
+					<h:inputSecret value="#{beanAdministrado.contrasenya}"></h:inputSecret>
+					
+					<f:facet name = "footer">
+						<p:commandButton value="Enviar" action="#{beanAdministrado.enviar}" style="width:298px; text-align:center" />
+					</f:facet>
+					
+      			</h:panelGrid>
+    		</p:panel>
 		</h:form>
 	</h:body>
 </ui:composition>
