--- a/Client/src/main/webapp/pais/disablePais.xhtml
+++ b/Client/src/main/webapp/pais/disablePais.xhtml
@@ -8,24 +8,24 @@
 	<ui:define name="content">
 		<div class="menubar">
 			<p:menubar>
-				<p:menuitem value="First"  action="#{beanAdministrado.goFirstPais(true)}" icon="goFirstPais" />
-				<p:menuitem value="Prior"  action="#{beanAdministrado.goPriorPais(true)}" icon="goPriorPais" />
-				<p:menuitem value="Next"   action="#{beanAdministrado.goNextPais(true)}"  icon="goNextPais" />
-				<p:menuitem value="Last"   action="#{beanAdministrado.goLastPais(true)}"  icon="goLastPais" />
+				<p:menuitem value="First"  action="#{beanAdministrado.goFirstPais(false)}" icon="goFirstPais" />
+				<p:menuitem value="Prior"  action="#{beanAdministrado.goPriorPais(false)}" icon="goPriorPais" />
+				<p:menuitem value="Next"   action="#{beanAdministrado.goNextPais(false)}"  icon="goNextPais" />
+				<p:menuitem value="Last"   action="#{beanAdministrado.goLastPais(false)}"  icon="goLastPais" />
 				<p:menuitem value="      " width="100" height="10" />				
-				<p:menuitem value="Acept"  action="#{beanAdministrado.updatePais(true)}" icon="AceptPais" />
+				<p:menuitem value="Acept"  action="#{beanAdministrado.disablePais(false)}" icon="AceptPais" />
 				<p:menuitem value="Cancel" action="#{beanAdministrado.selectPais}" icon="CancelPais" />
 			</p:menubar>
 		</div>
 	
-	    <p:panel header="Editando país" style="width:425px; text-align:center" >
+	    <p:panel header="Eliminando país" style="width:425px; text-align:center" >
         	<h:panelGrid columns="2" cellpadding="5" >
 				<h:outputText value="Nombre" />
-				<h:inputText value="#{beanAdministrado.paisOne.nopais}"></h:inputText>
+				<h:outputText value="#{beanAdministrado.paisOne.nopais}"/>
 				<h:outputText value="Continente" />
-				<h:inputText value="#{beanAdministrado.paisOne.contin}"></h:inputText>
+				<h:outputText value="#{beanAdministrado.paisOne.contin}"/>
 				<h:outputText value="Unión europea (S/N) " />
-				<h:inputText value="#{beanAdministrado.paisOne.comeur}"></h:inputText>
+				<h:outputText value="#{beanAdministrado.paisOne.comeur}"/>
 			</h:panelGrid>
     	</p:panel>
 			
